@@ -1,4 +1,5 @@
-<?lsmb INCLUDE "ui-header.html" ?>
+<?lsmb INCLUDE "ui-header.html" 
+    include_script = [ 'UI/payments/javascript/maximize_minimize.js' ] ?>
 <body id="payment_2_body"
 onLoad="maximize_minimize_on_load('div_topay_state', 'UI/payments/img/down.gif','UI/payments/img/up.gif') ">
  <form name="pay_single_dues" method="post" action="payment.pl">
